# FirstAttemptRep

./: README.md  exampleprogram.py  noxfile.py  pyproject.toml
Assignments/: fourth_assignment.py  second_assignment.py  third_assignment.py
Assignments/MATLAB/: lecture2_exercise1.m  lecture2_exercise2.m  lecture2_exercise3.m  lecture3_exercise.m  lecture6_exercise.mlx
Assignments/Python/: first_assignment.py  second_assignment.py
Tests/: exampleprogram_test.py
Things/: exampleprogram.py
docs/: assignments.rst  conf.py  configuration.py  documentation.rst  index.rst  layout.rst  linting&testing.rst  source.exampleprogram.rst
src/: Dummy.txt
src/FirstAttemptRep/: __init__.py
tests/: test_exampleprogram.py
